fixed align

--- a/Site/layout/style.css
+++ b/Site/layout/style.css
@@ -252,7 +252,8 @@ footer
 {
     background-color: #ffffff;
     padding:10px 10px 10px 10px;
-    overflow:hidden;
+    
+	overflow:hidden;
     margin: 0px 10px 10px;
     border-left: solid 1px #c3c5c9;
     border-right: solid 1px #c3c5c9;
@@ -266,6 +267,10 @@ footer
 
 
 
+}
+.center
+{
+text-align: center;
 }
 
 .orange
